--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,3 +5,22 @@
     padding: 0;
     border: none;
 }
+
+body{
+    font-family: Montserrat, sans-serif;
+    font-weight: 300;
+    color: rgba(26, 26, 26, .7)
+}
+
+h1, h2{
+    font-family: Montserrat, sans-serif;
+    color: rgba(26, 26, 26, .7);
+    text-transform: uppercase;
+    letter-spacing: 5px;
+
+}
+
+#logo{
+    float: left;
+    font-size: 100%;
+   }
