Add additional styling and hover effect for logo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,21 +6,31 @@
     border: none;
 }
 
-body{
+body {
     font-family: Montserrat, sans-serif;
     font-weight: 300;
     color: rgba(26, 26, 26, .7)
 }
 
-h1, h2{
+/* headings and logo */
+
+h1,
+h2 {
     font-family: Montserrat, sans-serif;
     color: rgba(26, 26, 26, .7);
     text-transform: uppercase;
     letter-spacing: 5px;
-
 }
 
-#logo{
+#logo {
     float: left;
     font-size: 100%;
-   }
+    margin-left: 5px;
+    opacity: 1.0;
+    transition: 0.5s;
+    line-height: 80px;
+}
+
+#logo:hover {
+    opacity: 0.5;
+}
