Add styling for navigation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,16 +16,15 @@ body {
 
 h1,
 h2 {
-    font-family: Montserrat, sans-serif;
     color: rgba(26, 26, 26, .7);
     text-transform: uppercase;
     letter-spacing: 5px;
 }
 
 #logo {
-    float: left;
     font-size: 100%;
-    margin-left: 5px;
+    float: left;
+    margin-left: 30px;
     opacity: 1.0;
     transition: 0.5s;
     line-height: 80px;
@@ -34,3 +33,17 @@ h2 {
 #logo:hover {
     opacity: 0.5;
 }
+
+/* navigation */
+
+#navigation li {
+    font-size:100%;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    list-style-type: none;
+    display: inline;
+    float: right;
+    margin-right: 30px;
+    line-height: 80px;
+    }
+
