--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,3 +47,15 @@ h2 {
     line-height: 80px;
     }
 
+    a {
+        text-decoration: none;
+        color: inherit;
+        padding: 10px 10px;
+        border-radius: 20px;
+    }
+
+ #navigation a:hover{
+    background-color: rgba(26, 26, 26, .7);
+    color: rgb(255, 255, 255)
+ }
+ 
