--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,9 +7,11 @@
 }
 
 body {
+    max-width: 1280px;
+    margin: 0 auto;
     font-family: Montserrat, sans-serif;
     font-weight: 300;
-    color: rgba(26, 26, 26, .7)
+    color: rgba(26, 26, 26, .7);
 }
 
 /* headings and logo */
@@ -21,13 +23,14 @@ h2 {
     letter-spacing: 5px;
 }
 
+
 #logo {
     font-size: 100%;
     float: left;
-    margin-left: 30px;
+    margin-left: 5px;
+    line-height: 80px;
     opacity: 1.0;
     transition: 0.5s;
-    line-height: 80px;
 }
 
 #logo:hover {
@@ -37,24 +40,38 @@ h2 {
 /* navigation */
 
 #navigation li {
-    font-size: 100%;
+    font-size: 90%;
     text-transform: uppercase;
     letter-spacing: 2px;
     list-style-type: none;
     display: inline;
     float: right;
-    margin-right: 30px;
+    margin-right: 5px;
     line-height: 80px;
 }
 
 a {
     text-decoration: none;
     color: inherit;
-    padding: 10px 10px;
+    padding: 7px 7px;
     border-radius: 20px;
 }
 
 #navigation a:hover {
     background-color: rgba(26, 26, 26, .7);
-    color: rgb(255, 255, 255)
+    color: rgb(255, 255, 255);
+}
+
+@media screen and (max-width: 950px) {
+    #navigation {
+        display: flex;
+        clear: left;
+        justify-content: center;
+    }
+
+    #logo {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
 }
