--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,14 @@ a {
     color: rgb(255, 255, 255);
 }
 
+#hero {
+    height: 400px;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+    background: url('../img/index_hero.png');
+ }
+
 @media screen and (max-width: 950px) {
     #navigation {
         display: flex;
@@ -94,7 +102,7 @@ a {
         padding: 0;
         width: 100%;
         display: flex;
-        font-size: 80%;
+        font-size: 70%;
         justify-content: center;
     }
 }
