Add quote plate on hero section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,6 +79,20 @@ a {
     opacity: 1.0;
 }
 
+#quote-plate{
+font-size: 180%;
+font-family: Oswald, sans-serif;
+text-transform: uppercase;
+color: rgba(255, 255, 255, 0.7);
+letter-spacing: 4px;
+width: 800px;
+height: 250px;
+top: 120px;
+left: 80px;
+position: absolute;
+}
+
+
 @media screen and (max-width: 950px) {
     #navigation {
         display: flex;
