--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@ a {
     width: 100%;
     overflow: hidden;
     position: relative;
-    background: url('../img/index_hero.png');
+    background: url('../img/index_hero.png') no-repeat center center;
     opacity: 0.9;
     transition: 0.5s
     }
