--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,13 +8,16 @@
 }
 
 html{
+    font-size: 62.5%;
     scroll-behavior: smooth;
 }
 
 body {
+    
     max-width: 1280px;
     margin: 0 auto;
     font-family: Montserrat, sans-serif;
+    font-size: 1.6rem;
     font-weight: 300;
     color: rgba(26, 26, 26, .7);
 }
@@ -29,7 +32,7 @@ h2 {
 }
 
 #logo {
-    font-size: 100%;
+    font-size: 1.9rem;
     float: left;
     margin-left: 5px;
     line-height: 80px;
@@ -48,7 +51,7 @@ h2 {
 /* navigation */
 
 #navigation li {
-    font-size: 90%;
+    font-size: 1.3rem;
     text-transform: uppercase;
     letter-spacing: 2px;
     list-style-type: none;
@@ -101,7 +104,7 @@ a {
 
 /* about us */
 #about-us {
-    height: 400px;
+    height: 300px;
     width: 100%;
 }
 
@@ -176,9 +179,7 @@ text-align: center;
         transition: 0.5s
     }
 
-    #about-us {
-        height: 600px;
-    }
+
 
 }
 
@@ -199,9 +200,9 @@ text-align: center;
         justify-content: center;
     }
 
-    #about-us{
+ /*   #about-us{
         height: 400px;
-    }
+    }*/
 
     #about-us p {
         font-size: 100%;
