Change logo to display flex

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,9 +33,9 @@ h2 {
 
 #logo {
     font-size: 1.9rem;
+    display: flex;
     float: left;
     margin-left: 5px;
-    line-height: 80px;
     opacity: 1.0;
     transition: 0.5s;
 }
@@ -50,7 +50,7 @@ h2 {
 
 /* navigation */
 
-#navigation li {
+.navigation li {
     font-size: 1.3rem;
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -58,7 +58,7 @@ h2 {
     display: inline;
     float: right;
     margin-right: 5px;
-    line-height: 80px;
+    line-height: 65px;
     transition: 0.5s;
 }
 
@@ -69,7 +69,7 @@ a {
     border-radius: 20px;
 }
 
-#navigation a:hover {
+.navigation a:hover {
     background-color: rgba(26, 26, 26, .7);
     color: rgb(255, 255, 255);
 }
@@ -151,7 +151,7 @@ text-align: center;
 /* responsive code */
 
 @media screen and (max-width: 950px) {
-    #navigation {
+    .navigation {
         display: flex;
         clear: left;
         justify-content: center;
@@ -184,7 +184,7 @@ text-align: center;
 }
 
 @media screen and (max-width: 465px) {
-    #navigation {
+    .navigation {
         display: flex;
         clear: left;
         justify-content: center;
