--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,7 +82,7 @@ a {
     
     overflow: hidden;
     position: relative;
-    background: url('../img/index_hero.png') no-repeat center center;
+    background: url('../images/index_hero.png') no-repeat center center;
     opacity: 0.9;
     transition: 0.5s
 }
@@ -200,7 +200,7 @@ a {
     margin: auto;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
     grid-gap: 40px;
 }
 
