--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,7 +239,7 @@ a {
 /* contact us section */
 
 #contact {
-    min-height: 300px;
+    min-height: 350px;
     width: 100%;
     background-color: #f8f8f8;
 }
@@ -277,7 +277,6 @@ a {
     font-size: 1.4rem;
 }
 
-
 .text-input {
     background: transparent;
     color: rgba(26, 26, 26, .7);
@@ -309,7 +308,7 @@ a {
     border-radius: 2px;
     padding: 15px;
     text-align: center;
-    font-size: 100%;
+    fo nt-size: 100%;
     background-color: #f16c6b;
     color: #fafafa;
     float: left;
@@ -317,20 +316,49 @@ a {
 
 }
 
-
 .submit-button:hover {
     background-color: #fafafa;
     color: #f16c6b;
-
 }
-
 
 #address {
     margin: 20px 0 0 0;
 }
 
+/* footer section */
 
+.footer-content {
+    height: 50px;
+    width: 100%;
+    margin: 30px 0 0 0;
+    font-size: 2rem;
+    line-height: 50px;
 
+}
+
+#copyright{
+    margin-left: 30px;
+    float: left;
+
+}    
+#social-media-bar{
+    margin-right: 30px;
+    float: right;
+  
+}
+
+.social-media-list > li{
+    list-style-type: none;
+    display: inline;
+    opacity: 0.7;
+    padding: 0 15px;
+    transition: 0.5s;
+}
+
+.social-media-list > li:hover
+{
+    opacity: 1;
+}
 
 /* responsive code */
 
