--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,7 +206,7 @@ a {
 }
 
 .portfolio-clients-element {
-    margin: 15px;
+    margin: 50px;
     font-size: 2rem;
     text-align: center;
 }
@@ -214,6 +214,13 @@ a {
 .portfolio-clients-element li {
     list-style-type: none;
     display: inline;
+    padding: 0 15px;
+    opacity: 0.4;
+    transition: 0.5s
+}
+
+.portfolio-clients-element li:hover {
+    opacity: 0.7;
 }
 
 
@@ -328,26 +335,27 @@ a {
 /* footer section */
 
 .footer-content {
-    height: 50px;
+    height: 60px;
     width: 100%;
     margin: 30px 0 0 0;
-    font-size: 2rem;
-    line-height: 50px;
+    font-size: 2.5rem;
+    line-height: 60px;
 
 }
 
-#copyright{
+#copyright {
     margin-left: 30px;
     float: left;
 
-}    
-#social-media-bar{
-    margin-right: 30px;
-    float: right;
-  
 }
 
-.social-media-list > li{
+#social-media-bar {
+    margin-right: 30px;
+    float: right;
+
+}
+
+.social-media-list>li {
     list-style-type: none;
     display: inline;
     opacity: 0.7;
@@ -355,8 +363,7 @@ a {
     transition: 0.5s;
 }
 
-.social-media-list > li:hover
-{
+.social-media-list>li:hover {
     opacity: 1;
 }
 
