Add audio clips to portfolio section and style all section backgrounds

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,8 +49,7 @@ h2 {
 
 /* navigation section */
 
-.navigation-area
-.top-navigation {
+.navigation-area .top-navigation {
     font-size: 1.2rem;
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -107,6 +106,8 @@ a {
 #about-us {
     min-height: 300px;
     max-width: 100%;
+    background-color: #f8f8f8;
+    border-radius: 20px;
 }
 
 #about-us h1 {
@@ -131,13 +132,13 @@ a {
     margin: 0 15px;
 }
 
-
 /* our services section */
 
 #our-services {
     min-height: 580px;
     width: 100%;
     background-color: #f8f8f8;
+    border-radius: 20px;
 }
 
 #our-services h1 {
@@ -161,7 +162,7 @@ a {
 }
 
 .our-services-grid-element {
-    margin: 15px;
+    margin: 0 15px;
     font-size: 1.8rem;
     text-align: justify;
 }
@@ -175,6 +176,8 @@ a {
 #portfolio {
     min-height: 550px;
     width: 100%;
+    background-color: #f8f8f8;
+    border-radius: 20px;
 }
 
 #portfolio h1 {
@@ -194,7 +197,7 @@ a {
 }
 
 .portfolio-welcome-element {
-    margin: 15px;
+    margin: 0 15px;
     font-size: 2rem;
     text-align: justify;
 }
@@ -224,12 +227,17 @@ a {
     opacity: 0.7;
 }
 
+video,
+audio {
+    max-width: 100%;
+}
+
 .portfolio-grid {
     margin: auto;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-auto-flow: row;
     grid-gap: 40px;
+
 }
 
 .portfolio-grid-element h2 {
@@ -239,14 +247,14 @@ a {
 
 .portfolio-media-description {
     text-align: justify;
+
 }
 
 .portfolio-grid-element {
-    margin: 15px;
+    margin: 0 15px;
     font-size: 1.8rem;
     text-align: center;
 }
-
 
 /* contact us section */
 
@@ -254,6 +262,7 @@ a {
     min-height: 1400px;
     width: 100%;
     background-color: #f8f8f8;
+    border-radius: 20px;
 }
 
 #contact h1 {
@@ -341,7 +350,6 @@ a {
     color: rgb(255, 255, 255);
 }
 
-
 .social-media-list {
     margin: 30px 0;
 }
@@ -359,9 +367,6 @@ a {
     opacity: 1;
 }
 
-
-
-
 /* footer section */
 
 .footer-content {
@@ -378,8 +383,14 @@ a {
     transition: 0.5s;
 }
 
-
 /* responsive code */
+
+@media screen and (min-width: 951px) {
+    .portfolio-grid {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+    }
+}
 
 @media screen and (max-width: 950px) {
 
@@ -387,8 +398,6 @@ a {
         display: flex;
         clear: left;
         justify-content: center;
-      
-
     }
 
     .navigation li {
@@ -413,28 +422,26 @@ a {
         transition: 0.5s
     }
 
+
+
     #copyright {
         font-size: 2rem;
-
     }
-
 }
 
 @media screen and (max-width: 640px) {
 
-    #logo{
+    #logo {
         font-size: 85%;
     }
 
-    .navigation-area
-    .top-navigation{
+    .navigation-area .top-navigation {
         display: block;
         line-height: 20px;
         text-align: center;
-     
     }
 
-    .top-navigation li{
+    .top-navigation li {
         font-size: 1.2rem;
     }
 
@@ -480,7 +487,6 @@ a {
 
     .navigation li {
         font-size: 1rem;
-      
     }
 
     #logo {
