--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -275,8 +275,7 @@ audio {
 .contact-us-grid {
     margin: auto;
     display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1 fr 1fr 1fr 1fr;
+    grid-auto-flow: row;
     grid-gap: 40px;
 }
 
