Style audio element

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -428,6 +428,14 @@ audio {
     }
 }
 
+audio{
+    width: 70%;
+    box-shadow: 5px 5px 20px rgba(0,0, 0, 0.4);
+    border-radius: 90px;
+    
+}
+
+
 @media screen and (max-width: 640px) {
 
     #logo {
