--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,8 @@ body {
 /* headings and logo */
 
 h1,
-h2 {
+h2,
+h3 {
     color: rgba(26, 26, 26, .7);
     text-transform: uppercase;
     letter-spacing: 5px;
@@ -110,7 +111,7 @@ a {
     border-radius: 20px;
 }
 
-#about-us h1 {
+#about-us h2 {
     font-size: 3.5rem;
     margin: 20px 0 0 0;
     padding: 30px;
@@ -141,7 +142,7 @@ a {
     border-radius: 20px;
 }
 
-#our-services h1 {
+#our-services h2 {
     font-size: 3.5rem;
     margin: 20px 0 0 0;
     padding: 30px;
@@ -156,7 +157,8 @@ a {
     grid-gap: 15px;
 }
 
-.our-services-grid-element h2 {
+.our-services-grid-element h3 {
+    font-size: 2.5rem;
     margin: 0 0 16px 0;
     text-align: center;
 }
@@ -180,7 +182,7 @@ a {
     border-radius: 20px;
 }
 
-#portfolio h1 {
+#portfolio h2 {
     font-size: 3.5rem;
     margin: 20px 0 0 0;
     padding: 30px;
@@ -240,9 +242,10 @@ audio {
 
 }
 
-.portfolio-grid-element h2 {
+.portfolio-grid-element h3 {
     margin: 0 0 16px 0;
     text-align: center;
+    font-size: 2.5rem;
 }
 
 .portfolio-media-description {
@@ -265,7 +268,7 @@ audio {
     border-radius: 20px;
 }
 
-#contact h1 {
+#contact h2 {
     margin: 20px 0 0 0;
     font-size: 3.5rem;
     padding: 30px;
