Add relevant text content to video and audio in portfolio section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -259,6 +259,11 @@ iframe {
 
 }
 
+.portfolio-media-description span {
+    font-style: italic;
+
+}
+
 .portfolio-grid-element {
     margin: 0 15px;
     font-size: 1.8rem;
