Add explaining comments in index.html for each section and area on the page and add credits for hero image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,7 +107,7 @@ a {
 #about-us {
     min-height: 300px;
     max-width: 100%;
-    background-color: #f8f8f8;
+    background-color: #eaeaea;
     border-radius: 20px;
 }
 
@@ -178,7 +178,7 @@ a {
 #portfolio {
     min-height: 550px;
     width: 100%;
-    background-color: #f8f8f8;
+    background-color: #eaeaea;
     border-radius: 20px;
 }
 
@@ -305,7 +305,7 @@ iframe
     margin: 0 auto;
     text-align: left;
     color: rgba(26, 26, 26, .7);
-    background-color: rgba(60, 60, 60, 0.1);
+    background-color: #eaeaea;
     max-width: 480px;
     min-height: 500px;
     padding: 30px;
